syntax = "proto3";

package todo;

service TodoService {
    rpc CreateTodo (TodoRequest) returns (TodoResponse);
    rpc DeleteTodo (TodoId) returns (TodoResponse);
    rpc UpdateTodo (TodoRequest) returns (TodoResponse);
    rpc ListTodos (Empty) returns (TodoListResponse);
}

message TodoItem {
    string id = 1;
    string title = 2;
    bool completed = 3;
}

message TodoRequest {
    TodoItem item = 1;
}

message TodoId {
    string id = 1;
}

message TodoResponse {
    string message = 1;
    TodoItem item = 2; // Optional: return the item in the response
}

message Empty {}

message TodoListResponse {
    repeated TodoItem items = 1;
}
